--- a/frontend/src/components/EmptyState.css
+++ b/frontend/src/components/EmptyState.css
@@ -70,6 +70,8 @@
   min-width: 150px;
   max-width: 200px !important;
   margin: 0 auto !important;
+  justify-content: center;
+  padding: 10px 2px !important;
 }
 
 .empty-state__button-dark {
